--- a/m/busi/steps/base.html
+++ b/m/busi/steps/base.html
@@ -13,7 +13,6 @@
 <body>
     <form id="form">
         <div title="填写基本信息">
-            <input name="rec_id" type="hidden">
             <div class="weui-cells__title">联系信息</div>
             <div class="weui-cells weui-cells_form">
                 <div class="weui-cell">
@@ -81,7 +80,7 @@
             </div>
         </div>
         <div class="weui-btn-area btn-area">
-            <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">返回</a>
+            <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="onBack()">返回</a>
             <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">下一步</a>
         </div>
     </form>
@@ -95,7 +94,7 @@
 		
 	var hash = window.location.hash;
     function onBack() {
-        window.history.back();
+        window.location.href="../../index.html";
     }
 
     function onSubmit() {
@@ -189,7 +188,6 @@
 		}
 	}
     $(function() {
-        $('#back-btn').on('click', onBack);
         $('#submit-btn').on('click', onSubmit);
         $('#city-picker').on('focus', function() {
             $$.showPicker(this, districtData);
