--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -291,8 +291,10 @@
             <div class="weui-media-box__desc">审核备注：{{row.checked_reason}}</div>
             <ul class="weui-media-box__info">
                 <li class="weui-media-box__info__meta">创建时间：{{row.created_time}}</li>
-                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">创建人：{{row.expand_nm}}</li>
             </ul>
+			<ul class="weui-media-box__info">
+				<li class="weui-media-box__info__meta">创建人：{{row.expand_nm}}</li>
+			</ul>
         </div>
         {{/each}}
     </script>
@@ -472,10 +474,10 @@
 		$$.request('/action/bm/mchnt-base-info/view', {mchnt_id: query.mchnt_id}, {
             success: function(data) {
                 if (data.errcode == 0) {
-                    $('input[name="linkman"]').val(data.linkman);
-					$('input[name="mobile"]').val(data.mobile);
-					$('input[name="telno"]').val(data.telno);
-					$('input[name="shop_name"]').val(data.mchnt_abbr);
+                    $('input[name="linkman"]').val(data.data.linkman);
+					$('input[name="mobile"]').val(data.data.mobile);
+					$('input[name="telno"]').val(data.data.telno);
+					$('input[name="shop_name"]').val(data.data.mchnt_abbr);
                 } else {
 					
                 }
