--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="page">
+    <div class="page" id="page1">
         <form id="form">
             <div class="weui-cells__title">营业执照</div>
             <div class="weui-cells weui-cells_form">
