--- a/m/index.html
+++ b/m/index.html
@@ -48,7 +48,7 @@
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_actionSheet.png" alt="">
                     </div>
-                    <p class="weui-grid__label">待办事务</p>
+                    <p class="weui-grid__label">待办事项</p>
                 </a>
                 <a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
