--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -290,7 +290,7 @@
 			data: type,
 			onClickItem: function(row) {
 				if(row.value == '2') {
-					$('#s10').prop('checked', false);
+					$('#s10').prop('checked', false).change();
 				}
 				weui.page.show('#page1');
 			}
