--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -351,7 +351,7 @@
             <div class="weui-media-box__desc">联系人：{{row.linkman}}</div>
             <div class="weui-media-box__desc">联系人手机：{{row.mobile}}</div>
             <div class="weui-media-box__desc">地址：{{row.addr}}</div>
-            <div class="weui-media-box__desc">商户名称：{{row.mchnt_name}}</div>
+            <div class="weui-media-box__desc">商户名称：{{row.mchnt_abbr}}</div>
             <div class="weui-media-box__desc">营业执照：{{row.license_no}}</div>
             <div class="weui-media-box__desc">审核备注：{{row.checked_reason}}</div>
             <ul class="weui-media-box__info">
