--- a/m/busi/steps/routine.html
+++ b/m/busi/steps/routine.html
@@ -48,15 +48,13 @@
         <div class="weui-media-box weui-media-box_text">
             <div class="weui-media-box__desc">地址：{{row.addr}}</div>
 			<div class="weui-media-box__desc">联系方式：{{row.mobile}}</div>
-			<div class="weui-media-box__desc">业务类型：{{row.busi_type}}</div>
+			<div class="weui-media-box__desc">业务类型：{{row.busi_type_nm}}</div>
             <ul class="weui-media-box__info">
                 <li class="weui-media-box__info__meta">创建时间：{{row.created_time}}</li>
-				<li class="weui-media-box__info__meta weui-media-box__info__meta_extra">创建人：{{row.last_created_by_nm}}</li>
             </ul>
-            <ul class="weui-media-box__info" style="margin-top: 0px;">
-                <li class="weui-media-box__info__meta">修改时间：{{row.last_modified_time}}</li>
-				<li class="weui-media-box__info__meta weui-media-box__info__meta_extra">修改人：{{row.last_modified_by_nm}}</li>
-            </ul>
+			<ul class="weui-media-box__info">
+                <li class="weui-media-box__info__meta">创建人：{{row.last_created_by}}</li>
+			</ul>
         </div>
         {{/each}}
     </script>
