--- a/m/busi/steps/routine.html
+++ b/m/busi/steps/routine.html
@@ -53,7 +53,7 @@
                 <li class="weui-media-box__info__meta">创建时间：{{row.created_time}}</li>
             </ul>
 			<ul class="weui-media-box__info">
-                <li class="weui-media-box__info__meta">创建人：{{row.last_created_by}}</li>
+                <li class="weui-media-box__info__meta">创建人：{{row.created_by}}</li>
 			</ul>
         </div>
         {{/each}}
