--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -200,9 +200,10 @@
 	}
 	
 	function checkMustPic() {
-		$('#form').find('.weui-uploader .required').each(function(index, item){
-			if(($(this).closest('.weui-cell').hasClass('hide') == false) &&
-				($(this).find('.weui-uploader__file').length === 0)) {
+		$('#form').find('.weui-uploader').each(function(index, item){
+			if(($(this).hasClass('required')) &&
+			   	($(this).closest('.weui-cell').hasClass('hide') == false) &&
+					($(this).find('.weui-uploader__file').length === 0)) {
 				weui.alert('请完善电子资料', {
 					title: '提示'
 				});
