--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -201,12 +201,8 @@
 	
 	function checkMustPic() {
 		$('#form').find('.weui-uploader.required').each(function(index, item){
-			alert($(this).find('.weui-uploader__file').length+','+$(this).closest('.weui-cell').hasClass('hide'));
 			if(($(this).find('.weui-uploader__file').length) == 0) {
 				if($(this).closest('.weui-cell').hasClass('hide') == false) {
-					weui.alert('请完善电子资料', {
-						title: '提示'
-					});
 					return false;
 				}
 			}
@@ -216,7 +212,12 @@
 		
     function onSubmit() {
         if (!weui.form.validate('#form', $$.rules)) return;
-		if (!checkMustPic()) return;
+		if (!checkMustPic()) {
+			weui.alert('请完善电子资料', {
+				title: '提示'
+			});
+			return;
+		}
         var param = $('#form').serializeObject();
         var elec_info = [];
 		if (hash.substr(0, 6) == '#step/') {
