--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -203,7 +203,7 @@
 		$('#form').find('.weui-uploader.required').each(function(index, item){
 			var target = $(this);
 			if(target.find('.weui-uploader__file').length == 0) {
-				if(!(target.closest('.weui-cell').hasClass('hide')) {
+				if(!(target.closest('.weui-cell').hasClass('hide'))) {
 					return false;
 				}
 			}
