--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -204,6 +204,7 @@
 			var target = $(this);
 			if(target.find('.weui-uploader__file').length == 0) {
 				if(!(target.closest('.weui-cell').hasClass('hide'))) {
+					alert('exit');
 					return false;
 				}
 			}
