--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -214,7 +214,7 @@
     function onSubmit() {
         if (!weui.form.validate('#form', $$.rules)) return;
 		
-		if (!checkMustPic()) {
+		if (checkMustPic() === false) {
 			alert('false');
 			weui.alert('请完善电子资料', {
 				title: '提示'
