--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -200,23 +200,23 @@
 	}
 	
 	function checkMustPic() {
+		var check = true;
 		$('#form').find('.weui-uploader.required').each(function(index, item){
 			var target = $(this);
 			if(target.find('.weui-uploader__file').length == 0) {
 				if(!(target.closest('.weui-cell').hasClass('hide'))) {
-					alert('false');
-					return false;
+					check = false;
+					return check;
 				}
 			}
 		});
-		alert('true');
-		return true;
+		return check;
 	}
 		
     function onSubmit() {
         if (!weui.form.validate('#form', $$.rules)) return;
 		
-		if (checkMustPic() === false) {
+		if (!checkMustPic()) {
 			weui.alert('请完善电子资料', {
 				title: '提示'
 			});
