--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -206,7 +206,7 @@
                         <input class="weui-input" type="text" name="remark" placeholder="请输入备注">
                     </div>
                 </div>
-                <div class="weui-cell">
+                <!--div class="weui-cell">
                     <div class="weui-cell__hd">
                         <label class="weui-label">拓展方<span class="required">*</span></label>
                     </div>
@@ -223,7 +223,7 @@
                         <input class="weui-input" type="text" name="expand_nm" required="" placeholder="请选择拓展人" id="expand-select2" readonly>
                         <input type="hidden" name="expand_id">
                     </div>
-                </div>
+                </div-->
             </div>
             <div class="weui-btn-area btn-area">
                 <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">返回</a>
