--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -118,7 +118,7 @@
                         <label class="weui-label">营业执照号<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="license_no" required="" placeholder="请输入营业执照号" validType="license_no" invalidTips="请输入有效的营业执照">
+                        <input class="weui-input" type="text" name="license_no" required="" placeholder="请输入营业执照号" validType="license_no" invalidTips="请输入有效的营业执照" onkeyup="this.value=this.value.toUpperCase()">
                     </div>
                 </div>
                 <div class="weui-cell">
