--- a/m/busi/steps/account.html
+++ b/m/busi/steps/account.html
@@ -96,11 +96,11 @@
                 </div-->
             <div class="weui-cell">
                 <div class="weui-cell__hd">
-                    <label class="weui-label">开户支行</label>
+                    <label class="weui-label">开户支行<span class="required">*</span></label>
                 </div>
                 <div class="weui-cell__bd">
                     <input class="weui-input" type="text" name="account_bank_branch_nm" placeholder="请选择开户支行" id="account-bank-branch-select2">
-                    <input type="hidden" name="account_bank_branch_cd">
+                    <input type="hidden" required="" name="account_bank_branch_cd">
                 </div>
             </div>
         </div>
